admin & auth pages
added admin only pages.

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,6 +15,7 @@
         <div class="nav-wrapper container">
             <a id="logo-container" href="#" class="brand-logo"></a>
             <ul class="right hide-on-med-and-down">
+                <li><a href="{{logout}}">log out</a></li>
                 <li><a href="#profile">profile</a></li>
                 <li><a href="#contact">contact</a></li>
                 <!-- <li><a href="#skillset">skillset</a></li> -->
@@ -23,6 +24,7 @@
             </ul>
 
             <ul id="nav-mobile" class="side-nav">
+                <li><a href="{{logout}}">log out</a></li>
                 <li><a href="#profile">profile</a></li>
                 <li><a href="#contact">contact</a></li>
                 <!-- <li><a href="#skillset">skillset</a></li> -->
@@ -54,8 +56,8 @@
                 <div class="col s12 m12">
                     <div class="icon-block">
                         <h2 class="center brown-text"><i class="material-icons">settings_power</i></h2>
-<!--                         <h5 class="center">Creative INTP</h5>
-                        <p class="light">Developing applications that surprise people, apps that people are thrilled to use, is what I love to do. I believe that code is art, and I am an artist. I thrive on good reviews. I find refactoring relaxing. I code on vacation. </p> -->
+                        <h5 class="center">Creative INTP</h5>
+                        <p class="light">Developing applications that surprise people, apps that people are thrilled to use, is what I love to do. I believe that code is art, and I am an artist. I thrive on good reviews. I find refactoring relaxing. I code on vacation. </p>
                         <p class="light">15 years of experience writing applications for enterprise, for statups, and for myself.  I've grown from C, C++, C# and .net, Sharepoint, MSSql and MySql, SOAP services and MOSS to iOS, Android (gosh, I love Android), rest, json, java, python, AWS and appengine, mongodb, node.js, schemaless data. But always - well, almost always - javascript. </p>
                         <p class="light">I am a perfectionist in all things. I can knit a mean touque.</p>
                     </div>
@@ -232,6 +234,17 @@
         </div>
     </div>
 
+   <!--  <div id="personalexp" class="scrollspy parallax-container valign-wrapper">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <div class="row center">
+                    <h5 class="header col s12 light">- personal projects -</h5>
+                    <h6>for the love of code</h6>
+                </div>
+            </div>
+        </div>
+        <div class="parallax"><img src="/img/background1.jpg" alt="mount ranier"></div>
+    </div>
 
     <div class="container scrollspy">
         <div class="section">
@@ -423,7 +436,7 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
     <footer class="page-footer grey darken-3">
         <div id="contact" class="container scrollspy">
@@ -448,9 +461,6 @@
             </div>
         </div>
     </footer>
-
-    <a href="https://github.com/nebulae/mentalpad"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
-
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="/js/materialize.js"></script>
