--- a/templates/main.html
+++ b/templates/main.html
@@ -124,7 +124,7 @@
     </div>
 
     <div class="container">
-        <div id="profexp" class="section scrollspy">
+        <div id="profexp" class="section scrollspy">`
           <div class="row">
 <!--             <div class="col s12 center grey-text"><h5>Professional Experience</h5></div>
  -->                <div class="card col s12 left">
@@ -342,8 +342,8 @@
                             <span class="card-title activator grey-text text-darken-4">Bad Seed Breedables<i class="material-icons right">more_vert</i></span>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">backed &amp; rest services for a LibGDX game<i class="material-icons right">close</i></span>
-                            <p>I wanted to create a system for breedables, which would support mutation of genetics, and be as close to realistic genetic evolution as possible.  MISSION ACCOMPLISHED. The problem I face, sadly, is the cost of the computation of the genetics of the conceived child is almost too high to support a game play scenario, and I don't wish to stupify the algorithm which dictates the genetics of the child. #justINTPthings </p>
+                            <span class="card-title grey-text text-darken-4">Genetic Evolution - Backend System<i class="material-icons right">close</i></span>
+                            <p>I wanted to create a system for breedables, which would support mutation of genetics, and be as close to realistic genetic evolution as possible.  MISSION ACCOMPLISHED. The problem I face, sadly, is the cost of the computation of the genetics of the conceived child is almost too high to support a game play scenario, and I don't wish to stupify the algorithm which dictates the genetics of the child. Rest, NDB, Appengine, Python </p>
                         </div>
                     </div>
                 </div>
