--- a/templates/main.html
+++ b/templates/main.html
@@ -239,6 +239,7 @@
             <div class="row">
                 <div class="col s12 m12">
                     <div class="icon-block">
+                        <h2>Personal Projects</h2>
                         <h2 class="center brown-text"><i class="material-icons">android</i></h2>
                         <h5 class="center">Android Apps</h5>
                     </div>
